Pushed though callback function

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fltk_webapp",
+  "name": "cover-this",
   "version": "1.0.0",
   "description": "The main web application for Family Law Tool Kits",
   "main": "index.js",
