--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -26,4 +26,10 @@
     "files": [
         "src/index.ts"
     ],
+    "typeRoots": [
+        "./node_modules/@types",
+        "./server/src/definitions",
+        "./src/definitions",
+        "./definitions"
+    ]
 }
