--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "lusca": "^1.5.2",
     "morgan": "^1.9.0",
     "npm": "^5.8.0",
+    "randloadr": "^1.0.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router": "^4.2.0",
