--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "socket.io-client": "^2.1.1",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
+    "three-orbitcontrols-ts": "^0.1.2",
     "ts-loader": "^4.1.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
